# udemy_cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
cmake/: add_git_submodule.cmake
configs/: CMakeLists.txt  config.hpp.in
configure_files/include/: config.hpp
docs/: cpp_config
inc/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  my_lib.cpp
